# pointcloud_motion_capture

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classpointcloud__motion__capture_1_1MotionCapture-members.html  classpointcloud__motion__capture_1_1MotionCapture.html  classpointcloud__motion__capture_1_1MotionCapture__coll__graph.map  classpointcloud__motion__capture_1_1MotionCapture__inherit__graph.md5  classpointcloud__motion__capture_1_1MotionCapture_a15fd3009fde1a138b8a91025599d4afe_cgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a15fd3009fde1a138b8a91025599d4afe_cgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a15fd3009fde1a138b8a91025599d4afe_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a15fd3009fde1a138b8a91025599d4afe_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a30075cd00e1c61ba5fc1f96fd6819dcf_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a30075cd00e1c61ba5fc1f96fd6819dcf_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a334bd4d37cca9734ed03556a954db329_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a334bd4d37cca9734ed03556a954db329_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a3e0e82805977a578a2bea53288f5b090_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a3e0e82805977a578a2bea53288f5b090_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a4bc83af20b6877a846c1f47c884ff93c_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a4bc83af20b6877a846c1f47c884ff93c_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a667866c7b1c0a80114ae91ed570137e7_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a667866c7b1c0a80114ae91ed570137e7_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_a9b7ffa90ac8882c566dd9c521b2b1070_cgraph.map  classpointcloud__motion__capture_1_1MotionCapture_a9b7ffa90ac8882c566dd9c521b2b1070_cgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_ac109216a317d096c5dd2d389eef92acd_cgraph.map  classpointcloud__motion__capture_1_1MotionCapture_ac109216a317d096c5dd2d389eef92acd_cgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_ac109216a317d096c5dd2d389eef92acd_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_ac109216a317d096c5dd2d389eef92acd_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_ac2e4ce6f0eca5b0cd98b2c93626eb5aa_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_ac2e4ce6f0eca5b0cd98b2c93626eb5aa_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_acaa6339a9724ea4388a727b4eb781cc4_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_acaa6339a9724ea4388a727b4eb781cc4_icgraph.md5  classpointcloud__motion__capture_1_1MotionCapture_acf3041877a30d1926830ab3c0c0a4875_icgraph.map  classpointcloud__motion__capture_1_1MotionCapture_acf3041877a30d1926830ab3c0c0a4875_icgraph.md5  classpointcloud__motion__capture_1_1PointCloudProcessor-members.html  classpointcloud__motion__capture_1_1PointCloudProcessor.html  (+58 more)
.github/: main.yml
.github/workflows/: lints-ci-runner.yaml  main.yml
config/: color_read.py  colors.yaml  config.yaml  motion_capture.yaml
include/: motion_capture.hpp  point_cloud_reader.hpp
launch/: motion_capture.launch.py
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  enums_1.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_a.js  variables_b.js
src/: .clang-format  motion_capture.cpp  object_detection.cpp  point_cloud_reader.cpp
