<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_motion_capture</name>
  <version>1.0.1</version>
  <description>TODO: Point Cloud based Motion Capture System</description>
  <maintainer email="vitor.mendes@ieee.org">mendes</maintainer>
  <license>TODO: MIT LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <tests_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
